--- a/app/src/main/res/layout/activity_data_storage.xml
+++ b/app/src/main/res/layout/activity_data_storage.xml
@@ -25,5 +25,12 @@
         android:text="Database"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/btn_greendao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="GreenDao"
+        android:textAllCaps="false" />
+
 
 </LinearLayout>
