--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -1,23 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="15dp">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_1"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:background="#ff9900"
-        android:src="@drawable/mountain"
-        android:scaleType="fitXY"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="15dp">
 
-    <ImageView
-        android:id="@+id/iv_2"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:background="#ff9900"
-        android:layout_below="@id/iv_1"
-        android:layout_marginTop="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="正常显示的图片" />
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/iv_1"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:background="#ff9900"
+            android:scaleType="fitXY"
+            android:src="@drawable/mountain" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="利用原生代码网络加载的图片" />
+
+        <ImageView
+            android:id="@+id/iv_2"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:background="#ff9900" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="利用Glide网络加载的图片" />
+
+        <ImageView
+            android:id="@+id/iv_3"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:background="#ff9900" />
+    </LinearLayout>
+
+</ScrollView>
