--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,4 +90,11 @@
         android:text="开源框架"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/btn_web_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WebView"
+        android:textAllCaps="false" />
+
 </LinearLayout>
