--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -30,4 +30,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="WebSettings使用" />
+
+    <Button
+        android:id="@+id/btn_web_client"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WebClient使用" />
+
 </LinearLayout>
