--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -37,4 +37,16 @@
         android:layout_height="wrap_content"
         android:text="WebClient使用" />
 
+    <Button
+        android:id="@+id/btn_web_chrome_client"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WebChromeClient使用" />
+
+    <Button
+        android:id="@+id/btn_js"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="使用JS代码" />
+
 </LinearLayout>
