视图转换动画

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
             android:textAllCaps="false" />
 
         <Button
-            android:id="@+id/btn_objectanim"
+            android:id="@+id/btn_anim"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="动画"
